adapt calculator and new signup to new tailwind config

--- a/app/views/devise/registrations/new_alternative.html.erb
+++ b/app/views/devise/registrations/new_alternative.html.erb
@@ -2,10 +2,10 @@
   <%= render "shared/header" %>
 </nav>
 
-<div class="bg-secondary">
+<div class="bg-secondary text-primary">
   <section class="bg-brand bg-brand-image bg-bottom bg-no-repeat bg-cover">
     <div class="text-center pt-24 sm:pt-40 pb-48 sm:pb-64 px-10 lg:px-0 max-w-4xl mx-auto">
-          <h1 class="text-3xl md:text-5xl my-5"><%= t 'views.registrations.well_done' %></h1>
+          <h1 class="text-3xl font-bold md:text-5xl my-5"><%= t 'views.registrations.well_done' %></h1>
     </div>
   </section>
 
@@ -14,7 +14,7 @@
       <div class="md:w-1/2">
         <h2><%= t 'views.registrations.your_yearly_climate_footprint' %></h2>
         <p class="font-bold">
-          <span class="text-6xl"><%= @footprint_tonnes.tonnes.round(1) %></span>
+          <span class="text-3xl"><%= @footprint_tonnes.tonnes.round(1) %></span>
           <span class="text-lg"><%= t 'views.shared.tonnes_co2e.other' %></span>
         </p>
         <p class="mb-4"><%= t 'views.registrations.corresponds_to', price: @footprint_price.to_s(precision: :auto) %></p>
@@ -51,7 +51,7 @@
 
   <section class="bg-secondary" data-controller='registration-price'>
     <div class="max-w-6xl mx-auto py-20 px-10 lg:px-0">
-      <h2 class="text-4xl mb-4 text-center"><%= t 'views.registrations.subscribe_heading' %></h2>
+      <h2 class="text-3xl font-bold mb-4 text-center"><%= t 'views.registrations.subscribe_heading' %></h2>
       <p class="text-xl mb-4 mx-auto max-w-4xl text-center"><%= t 'views.registrations.subscribe_intro' %></p>
 
 
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="flex items-center mt-4">
-          <button class="button-brand" data-target="registration-form.submitButton" data-action="registration-form#submit">
+          <button class="button button-primary" data-target="registration-form.submitButton" data-action="registration-form#submit">
             <i class="fa fa-spinner fa-spin hidden" data-target="registration-form.loadingIndicator"></i>
             <%=t 'go_climate_neutral' %>
           </button>
@@ -163,7 +163,7 @@
   <section class="bg-bg">
     <div class="text-center pt-16 pb-48 px-10 lg:px-0 max-w-2xl mx-auto">
       <i class="fa fa-question-circle text-big-icon text-icon" aria-hidden="true"></i>
-      <h2 class="text-4xl mb-4"><%= t 'views.registrations.faq' %></h2>
+      <h2 class="text-3xl font-bold mb-4"><%= t 'views.registrations.faq' %></h2>
       <% [1, 4, 5, 9, 10, 19, 20].each do |q| %>
         <div class="block border p-3 mt-4 rounded text-left collapse">
           <input id="question-<%= q %>" type="checkbox">
