update footer and prefooter to new tailwind config

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -48,7 +48,7 @@
       </div>
       <div class="text-center">
         <div class="dropdown">
-          <label class="button">
+          <label class="button button-inverted">
             <input type="checkbox">
             <%= image_tag webpack_asset_path("images/regions/#{current_region.id}.png"), class: 'inline-block' %>
             <%= current_region.name %>
