--- a/app/views/shared/_prefooter.html.erb
+++ b/app/views/shared/_prefooter.html.erb
@@ -1,7 +1,7 @@
-<section class="bg-brand">
+<section class="bg-blue-tint-1 text-primary">
   <div class="max-w-6xl mx-auto py-20 px-10 lg:px-0 text-center">
-    <h3 class="text-4xl my-5"><%= t('welcome.call_to_actions.lets_save_our_planet_together') %></h3>
+    <h3 class="text-3xl my-5 font-bold"><%= t('welcome.call_to_actions.lets_save_our_planet_together') %></h3>
     <p class="my-3 text-xl"><%= t('welcome.how_it_works.sign_up_text') %> </p>
-    <a href="/" class="button-brand"><%= t('welcome.call_to_actions.go_climate_neutral') %></a>
+    <a href="/" class="button button-primary"><%= t('welcome.call_to_actions.go_climate_neutral') %></a>
   </div>
 </section>
