--- a/app/assets/main/components/dropdown.scss
+++ b/app/assets/main/components/dropdown.scss
@@ -6,7 +6,9 @@
   }
 
   .dropdown-menu {
-    @apply hidden absolute top-100 left-0 border border-primary rounded py-1 my-1 shadow-md text-left;
+    @apply hidden absolute top-100 left-0 
+    bg-white text-primary border border-primary 
+    rounded py-1 my-1 shadow-md text-left;
   }
 
   .dropdown-menu-up {
