--- a/app/assets/main/components/section_gutter.scss
+++ b/app/assets/main/components/section_gutter.scss
@@ -1,8 +1,8 @@
 .section-gutter {
-  @apply -m-4;
+  @apply -mx-4 -my-8;
 
   & > * {
-    @apply m-4;
+    @apply mx-4 my-8;
   }
 
   @screen d-md {
