--- a/app/views/welcome/index_new.html.erb
+++ b/app/views/welcome/index_new.html.erb
@@ -5,11 +5,11 @@
 </nav>
 
 <section class="bg-blue-tint-1 relative">
-  <div class="max-w-screen-t mx-auto px-4 t:px-16 d:px-0 pt-32 relative z-10 text-center">
+  <div class="max-w-3xl mx-auto px-4 t:px-16 d:px-0 pt-16 t:pt-32 relative z-10 text-center">
     <h1 class="heading-xl mb-12">
       <%=t 'views.welcome.index.hero.heading' %><br>
     </h1>
-    <p class="my-4"><%=t 'views.welcome.index.hero.body_text' %></p>
+    <p class="my-4 max-w-lg mx-auto"><%=t 'views.welcome.index.hero.body_text' %></p>
     <div>
       <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3' do |f| %>
       <div class="relative">
@@ -21,14 +21,14 @@
                 ].flatten.compact
               },
               {
-                class: 'select w-full m-lg:w-auto',
+                class: 'select w-full m-lg:w-auto m-lg:max-w-xs',
                 required: ''
               } %>
-        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2">
           <i class="fa fa-angle-down" aria-hidden="true"></i>
         </div>
       </div>
-      <%= f.submit t('views.welcome.index.get_started'), name: nil, class: 'button button-primary mt-2 m-lg:mt-0 m-lg:ml-2' %>
+      <%= f.submit t('views.welcome.index.get_started'), name: nil, class: 'button button-primary mt-2 m-lg:mt-0 m-lg:ml-2 w-full m-lg:w-auto' %>
       <% end %>
     </div>
   </div>
@@ -59,9 +59,9 @@
             body_key: 'views.welcome.index.how_it_works.bullets.bullet_3_text'
           }
         ].each do |item| %>
-          <div class="callout w-full m-lg:w-3/4 d:w-1/3 p-4 d:p-8 bg-white flex flex-col items-center">
-            <%= image_tag webpack_asset_path(item[:image_url]), class: '-mt-24' %>
-            <h3 class="text-lg font-semibold my-2"><%=t item[:title_key] %></h3>
+          <div class="callout w-full m-lg:w-3/4 d:w-1/3 p-4 d:p-8 bg-white">
+            <%= image_tag webpack_asset_path(item[:image_url]), class: '-mt-24 mx-auto' %>
+            <h3 class="text-lg font-semibold my-2 text-center"><%=t item[:title_key] %></h3>
             <p><%=t item[:body_key] %></p>
           </div>
         <% end %>
@@ -75,7 +75,7 @@
 
 
 <section class="section-padding">
-  <div class="section-gutter flex flex-col-reverse t:flex-row items-center">
+  <div class="section-gutter t:flex flex-row items-center">
     <div class="t:w-1/2">
       <h2 class="heading-lg"><%= t 'views.welcome.index.about_us.heading' %></h2>
       <p class="my-6"><%=t 'views.welcome.index.about_us.body_text' %></p>
@@ -83,7 +83,7 @@
         <%= link_to t('views.welcome.index.about_us.read_more'), about_path, class: 'button mx-auto t:mx-0' %>
       </div>
     </div>
-    <div class="t:w-1/2 m-lg:max-w-3/4">
+    <div class="t:w-1/2 m-lg:max-w-3/4 mx-auto">
       <div class="relative w-full h-full pb-3/4">
         <% if I18n.locale == :sv %>
         <iframe src='https://player.vimeo.com/video/241825913' align='top' frameborder='0' webkitAllowFullScreen
