--- a/app/views/shared/_prefooter.html.erb
+++ b/app/views/shared/_prefooter.html.erb
@@ -4,9 +4,9 @@
   </div>
   <div class="bg-blue-tint-1">
     <div class="relative max-w-3xl mx-auto py-10 px-10 d:px-0 text-center space-y-3 z-10">
-      <h3 class="heading-lg"><%= t('welcome.call_to_actions.lets_save_our_planet_together') %></h3>
-      <p><%= t('welcome.how_it_works.sign_up_text') %> </p>
-      <p><a href="/" class="button"><%= t('welcome.call_to_actions.go_climate_neutral') %></a></p>
+      <h3 class="heading-lg"><%= t('views.shared.prefooter.heading') %></h3>
+      <p><%= t('views.shared.prefooter.body_text') %> </p>
+      <p><a href="/" class="button"><%= t('views.shared.prefooter.button') %></a></p>
     </div>
     <div class="-mt-8 m-lg:-mt-12 d:-mt-20 d-md:-mt-32">
       <%= image_tag webpack_asset_path('images/illustrations/prefooter_full.png') %>
