change button-primary classname to button-cta for clarity

--- a/app/views/devise/passwords/new_new.html.erb
+++ b/app/views/devise/passwords/new_new.html.erb
@@ -14,7 +14,7 @@
 
       <%= render "devise/shared/error_messages", resource: resource %>
 
-      <button type="submit" class="button button-primary"><%=t 'send_me_an_email_with_instructions' %></button>
+      <button type="submit" class="button button-cta"><%=t 'send_me_an_email_with_instructions' %></button>
     <% end %>
 
   </div>
