--- a/app/views/devise/registrations/new_alternative.html.erb
+++ b/app/views/devise/registrations/new_alternative.html.erb
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="flex items-center mt-4">
-          <button class="button button-primary" data-target="registration-form.submitButton" data-action="registration-form#submit">
+          <button class="button button-cta" data-target="registration-form.submitButton" data-action="registration-form#submit">
             <i class="fa fa-spinner fa-spin hidden" data-target="registration-form.loadingIndicator"></i>
             <%=t 'go_climate_neutral' %>
           </button>
