--- a/app/views/welcome/index_new.html.erb
+++ b/app/views/welcome/index_new.html.erb
@@ -28,7 +28,7 @@
             <i class="fa fa-angle-down" aria-hidden="true"></i>
           </div>
         </div>
-        <%= f.submit t('views.welcome.index.get_started'), name: nil, class: 'button button-primary mt-2 m-lg:mt-0 m-lg:ml-2 w-full m-lg:w-auto' %>
+        <%= f.submit t('views.welcome.index.get_started'), name: nil, class: 'button button-cta mt-2 m-lg:mt-0 m-lg:ml-2 w-full m-lg:w-auto' %>
       <% end %>
     </div>
   </div>
