add temporary solution to handle different colours in chart

--- a/app/views/devise/registrations/new_new.html.erb
+++ b/app/views/devise/registrations/new_new.html.erb
@@ -26,7 +26,9 @@
         data-lifestyle-footprint-chart-user-label="<%= t 'views.registrations.you' %>"
         data-lifestyle-footprint-chart-offset-label="<%= t 'views.registrations.compensated' %>"
         data-lifestyle-footprint-chart-country-label="<%= t 'views.registrations.average_in', region: @footprint.country.translation(I18n.locale) %>"
-        data-lifestyle-footprint-chart-target-label="<%= t 'views.registrations.goal_2030' %>">
+        data-lifestyle-footprint-chart-target-label="<%= t 'views.registrations.goal_2030' %>"
+        data-lifestyle-footprint-chart-new-design="true"
+        >
       </canvas>
     </div>
   </div>
